--- a/templates/liste/lEtudiants.html
+++ b/templates/liste/lEtudiants.html
@@ -10,9 +10,9 @@
                 <td>Prenom</td>
                 <td>Numéro d'étudiant</td>
             </tr>
-            {% for etudiants in lEtudiants %}         <!-- Affiche chaque utilisateur avec son mot de passe -->
-            <tr>                                            <!-- Rappel : cette page est uniquement accessible si -->
-                <td>{{etudiants.nomEtu}}</td>              <!-- l'utilisateur est 'ADMIN' -->
+            {% for etudiants in lEtudiants %}            <!-- Affiche chaque étudiant avec nom,prenom,numero -->
+            <tr>
+                <td>{{etudiants.nomEtu}}</td>
                 <td>{{etudiants.prenomEtu}}</td>
                 <td>{{etudiants.numeroEtu}}</td>
             </tr>
@@ -21,9 +21,9 @@
     </div>
     <br/>
     <div class="double newEtudiant">
-        <div style="margin-right: 1em;">
+        <div style="margin-right: 1em;">                 <!-- Ajout d'un étudiant via un csv -->
             <h1>Ajout d'étudiants<br/> via CSV</h1>
-            <form action="/listeEtudiants" method="POST" enctype="multipart/form-data">  <!-- Création d'un etudiant' -->
+            <form action="/listeEtudiants" method="POST" enctype="multipart/form-data">  
                 <p>Seuls les fichiers d'extension .csv sont acceptés!</p>
                 <br/>
                 <p><input type="file" id="fichierEtu" name="fichierEtu" accept=".csv" ></p>
@@ -32,7 +32,7 @@
             </form>
         </div>
         <div class="liVer"></div>
-        <div style="margin-left: 1em;">
+        <div style="margin-left: 1em;">                 <!-- Ajout d'un étudiant manuellement -->
             <h1>Ajout d'étudiants<br/> manuellement</h1>
             <form action="/listeEtudiants" method="POST">
                 <p> Nom : <input type="text" name="nomEtu" id="nomEtu"/></p>
