--- a/templates/question/modifQuestion.html
+++ b/templates/question/modifQuestion.html
@@ -25,19 +25,15 @@
         <div>
             <h1>Modifier vos réponses</h1>
 
-            {% for reponse in reponses %}
-            <!-- Pour chaque réponse parmis les réponses -->
-            {%if reponse.estNumerique %}
+            {% for reponse in reponses %}   <!-- Pour chaque réponse parmis les réponses -->
+            {% if reponse.estNumerique %}
             <p id="rep_num"><input type="text" id="Rep_num" name="R{{reponse.idR}}" pattern="\d*([.]\d{0,2})?" value="{{reponse.reponse}}"></p>
-            <!-- <p><input class="button" type="submit" value="Ajouter la question" /></p> -->
-            <p>congolais</p>
-            {%else%}
+            {% else %}
             <p><textarea name="R{{reponse.idR}}" rows="4" cols="40">{{reponse.reponse}}</textarea></p>
-            <p>raciste</p>
-            {%endif%} {% endfor %}
+            {% endif %}
+            {% endfor %}
             <p><input class="button" type="submit" value="Modifier" /></p>
         </div>
     </form>
-    <!-- <a class="button" name="menu" href="/">Retour au menu</a><br/> -->
 </div>
 {% endblock %}
