--- a/static/style.css
+++ b/static/style.css
@@ -44,6 +44,7 @@ h1 {
     background-color: whitesmoke;
 }
 
+/* Classe menu alternative compte */
 .menuAcc{
     font-size: 1em;
 }
@@ -74,6 +75,7 @@ h1 {
     }
 }
 
+/* Classe de la création d'étudiants */
 .newEtudiant {
     border: 2px solid black;
     text-align: center;
@@ -118,7 +120,6 @@ h1 {
     overflow-y: scroll;
 }
 
-
 /* Classe pour visualiser les questions dans ajoutQuestion (droite) */
 .visu {
     border: 0.5em solid black;
@@ -130,19 +131,16 @@ h1 {
     margin-left: 5em;
 }
 
-
 /* Affichage réponses visuel ligne */
 .repLi {
     display: flex;
 }
-
 
 /* Affichage réponses visuel colonne */
 .repCo {
     display: flex;
     margin-right: 1em;
 }
-
 
 /* Classe pour modifier les <a> afin qu'ils ressemblent à des boutons */
 .button {
@@ -156,12 +154,10 @@ h1 {
     transition: 0.25s;
 }
 
-
 /* Si on a déjà cliquer sur un bouton */
 .button:visited {
     color: black;
 }
-
 
 /* Lorsqu'on passe le curseur dessus */
 .button:hover {
@@ -179,7 +175,6 @@ footer {
     font: menu;
 }
 
-
 /* Classe affichage de la barre de navigation */
 .nav-list {
     list-style-type: none;
@@ -190,12 +185,15 @@ footer {
     font: menu;
 }
 
-
-/* allignement des li de la navigation à gauche */
-.nav-list li {
+/* alignement de la navigation à gauche */
+.navBouton {
     float: left;
 }
 
+/* bouton supprimer aligner à droite */
+.deco{
+    float: right;
+}
 
 /* Customisation des liens */
 .nav-list li a {
@@ -206,25 +204,21 @@ footer {
     text-decoration: none;
 }
 
-
 /* Lorsqu'on passe le curseur dessus */
 .nav-list li a:hover {
     background-color: #111;
 }
-
 
 /* Colore en rouge, le bouton de la page actuelle */
 .active {
     background-color: darkred;
 }
 
-
 /* taille de l'icone pour supprimer une réponse */
 .delete {
     width: 1.5vw;
     height: 1.5vw;
 }
-
 
 /* CSS de checkbox réponse (voir références) */
 [type="checkbox"].newReponse:not(:checked),
