--- a/templates/Affichage.html
+++ b/templates/Affichage.html
@@ -10,12 +10,16 @@
         <script>                                            /* Conversion de l'énoncé avec showdown */
             $('#{{listeQuestions[i].idQ}}').html(converter.makeHtml($('#{{listeQuestions[i].idQ}}').text()));
         </script>
-            {% for reponse in listeReponses[i] %}
-            <div class="affReponse"><input class="bigCheckbox" id="{{reponse.idR}}" type="checkbox"/> <label for="{{reponse.idR}}">{{reponse.reponse}}</label></div>
-            <script>
-                $('#{{reponse.idR}}').html(converter.makeHtml($('#{{reponse.idR}}').text()));
-            </script>
-            {% endfor %}
+            {% if listeReponses[i] == [] %}
+                <p><input type="text" pattern="\d*([.]\d{0,2})?"></p>
+            {% else %}
+                {% for reponse in listeReponses[i] %}
+                    <div class="affReponse"><input class="bigCheckbox" id="{{reponse.idR}}" type="checkbox"/> <label for="{{reponse.idR}}">{{reponse.reponse}}</label></div>
+                    <script>
+                        $('#{{reponse.idR}}').html(converter.makeHtml($('#{{reponse.idR}}').text()));
+                    </script>
+                {% endfor %}
+            {% endif %}
         <hr/>
         {% endfor %}
     </div>
