--- a/templates/wooclap/RepondreQCM.html
+++ b/templates/wooclap/RepondreQCM.html
@@ -1,15 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'partials/base.html' %} {% block main %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Repondre au question</title>
-</head>
 
-<body>
-    <p>Repondais au question</p>
-</body>
+<div class="menu">
+    <div class="menu">
+        <h1>{{nomQcm}}</h1>
+        <hr/>
+        <div class="affQCM">
+            {% for i in range(len) %}
+            <div class="affQuestion" id="{{listeQuestions[i].idQ}}">{{listeQuestions[i].enonce}}</div>
+            <script>
+                /* Conversion de l'énoncé avec showdown */
+                $('#{{listeQuestions[i].idQ}}').html(converter.makeHtml($('#{{listeQuestions[i].idQ}}').text()));
+            </script>
+            {% if listeReponses[i] == [] %}
+            <p><input type="text" pattern="\d*([.]\d{0,2})?"></p>
+            {% else %} {% for reponse in listeReponses[i] %}
+            <div class="affReponse"><input class="bigCheckbox" id="{{reponse.idR}}" type="checkbox" /> <label for="{{reponse.idR}}">{{reponse.reponse}}</label></div>
+            <script>
+                $('#{{reponse.idR}}').html(converter.makeHtml($('#{{reponse.idR}}').text()));
+            </script>
+            {% endfor %} {% endif %}
+            <hr/> {% endfor %}
+        </div>
+    </div>
 
-</html>
+
+    {% endblock %}
