--- a/templates/question/ajoutQuestion.html
+++ b/templates/question/ajoutQuestion.html
@@ -42,7 +42,7 @@
             <!-- <p><input type="number" id="rep_num" name="rep_num"></p> -->
             <!-- <label for="rep_num" class="label_rep_num"></label> -->
             <p id="rep_num">
-                <p><input type="text" pattern="\d*([.]\d{0,2})?" id="Rep_num" name="Rep_num"></p>
+                <p><input type="text" pattern="\d*([.]\d{0,2})?" id="Rep_num" name="Rep_num" onkeyup="visualiser()"></p>
                 <!-- <input type="text" id="rep_num1" name="rep_num1" pattern="[0-9]*"><b>.</b>
                 <input type="text" id="rep_num2" name="rep_num2" pattern="\d{0,2}" value="00"> -->
             </p>
