--- a/templates/accueil/espEnseignant.html
+++ b/templates/accueil/espEnseignant.html
@@ -1,7 +1,7 @@
 {% extends 'partials/base.html' %}
 
 {% block main %}
-<div class="menu menuAcc">
+<div class="menu menuAcc">                <!-- Espace dédié aux enseignants -->
     <h1>Espace<br/>Enseignant</h1>
     {% include 'partials/flash.html' %}
     <a class="button" name="creationCompteEns" href="/creationCompteEnseignant">Créer un compte</a>
