--- a/templates/accueil/espEtudiant.html
+++ b/templates/accueil/espEtudiant.html
@@ -1,7 +1,7 @@
 {% extends 'partials/base.html' %}
 
 {% block main %}
-<div class="menu menuAcc">
+<div class="menu menuAcc">                <!-- Espace dédié aux étudiants -->
     <h1>Espace<br/>Etudiant</h1>
     {% include 'partials/flash.html' %}
     <a class="button" name="connexionEtu" href="/connexionEtudiant">Connexion</a>
