--- a/templates/question/modifQuestion.html
+++ b/templates/question/modifQuestion.html
@@ -2,19 +2,16 @@
 
 {% block main %}
 <div class="double menu">
-    <!-- <form action="/visual" method="POST"> -->
     <form class="double" action="{{ url_for('modifier', id=idQ)}}" method="POST">
         <div>
-            <h1>Modifier votre énoncé</h1>
+            <h1>Modifier votre énoncé</h1> <!-- affichage de l'énoncé à modifier-->
             <p><textarea name="question" rows="4" cols="40">{{enonce}}</textarea></p>
-            <!-- affichage de l'énoncé à modifier-->
             <h1>Modifier vos étiquettes</h1>
             <div class="affichageEtiquette">
                 <fieldset>
                     <legend>Étiquettes</legend>
                     <ul>
-                        {% for etiquette in etiquettes %}
-                        <!-- Pour chaque etiquette parmi les etiquettes -->
+                        {% for etiquette in etiquettes %} <!-- Pour chaque etiquette parmi les etiquettes -->
                         <li><input type="checkbox" name="tag" value="{{ etiquette.idE }}"> {{ etiquette.nom }}</li>
                         {% endfor %}
                     </ul>
@@ -24,7 +21,6 @@
         <div class="liVer"></div>
         <div>
             <h1>Modifier vos réponses</h1>
-
             {% for reponse in reponses %}   <!-- Pour chaque réponse parmis les réponses -->
             {% if reponse.estNumerique %}
             <p id="rep_num"><input type="text" id="Rep_num" name="R{{reponse.idR}}" pattern="\d*([.]\d{0,2})?" value="{{reponse.reponse}}"></p>
