--- a/static/style.css
+++ b/static/style.css
@@ -429,6 +429,9 @@ input:invalid {
 }
 
 @media screen and (min-width: 1025px) and (max-width: 1280px) {
+    .menu{
+        font-size: 0.9em;
+    }
     .menuAcc {
         font-size: 1.3em;
     }
@@ -460,11 +463,25 @@ input:invalid {
     }
 }
 
-@media screen and (min-width: 1281px) and (max-width: 1440px) {
-    /* Pas nécessaire pour le moment */
+@media screen and (min-width: 1281px){
+    .menu{
+        font-size: 0.9em;
+    }
+    .liste{
+        font-size: 1.2em;
+        height:20vh;
+        width: auto;
+    }
+    table{
+        width: 45vw;
+    }
+    .newEtudiant{
+        font-size: 0.9em;
+        height: 40vh;
+    }
 }
 
-@media screen and (min-width: 1441px) and (max-width: 1680px) {
+@media screen and (min-width: 1441px){
     .menuAcc {
         font-size: 1.5em;
     }
