--- a/templates/QCM.html
+++ b/templates/QCM.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 <div class="menu">
-    <form action="/generateQCM" method="POST">
+    <form action="/listeQCM" method="POST">
         <!--ce form permet d'afficher la liste des question -->
         <h1>Créer votre examen</h1>
         <p>Donnez un titre à votre QCM : <input type="text" name="nomQcm" placeholder="Titre" /></p>
