--- a/templates/affichage.html
+++ b/templates/affichage.html
@@ -24,6 +24,17 @@
         {% endfor %}
     </div>
     <hr/>
-    <button>Télécharger votre QCM</button>
+    <script src=" https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js "></script>
+    <script>
+        function telechargement(){
+            var html = document.getElementsByClassName("affQCM")[0].innerHTML;
+            console.log(html)
+            var a = document.createElement('a');
+            a.href = 'data:text/html;charset=utf-8,' + encodeURIComponent(html);
+            a.download = 'qcm.html';
+            a.click()
+        }
+    </script>
+    <button onclick="telechargement()">Télécharger votre QCM</button>
 </div>
 {% endblock %}
