--- a/templates/liste/lQCM.html
+++ b/templates/liste/lQCM.html
@@ -14,7 +14,7 @@
                 <tr>
                     <td class="left" id="{{QCM.idQCM}}"> <a href="{{ url_for('afficheQCM', id=QCM.idQCM)}}">{{QCM.Nom}}</a> </td> 
                     <td style="border:none;width:2em">
-                        <a href="">         <!-- Bouton supprimer -->
+                        <a href="{{url_for('modifierQCM', id=QCM.idQCM)}}">         <!-- Bouton supprimer -->
                             <input style="margin-top: 4px; margin-bottom:-3px;" class="imgTab" type="image" src="/static/image/edit.png">
                         </a>
                     </td> 
