--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -6,7 +6,7 @@
         {% if session['nomU'] and session['role']=='enseignant' %}<li class="navBouton {% if page=='ListeQuestions' %} active {% endif %}"><a href="/lQuestion">Consulter Questions</a></li>{% endif %}
         <!-- {% if session['nomU'] and session['role']=='enseignant' %}<li class="navBouton {% if page=='CréerQcm' %} active {% endif %}"><a href="/QCM">Créer QCM</a></li>{% endif %} -->
         {% if session['nomU'] and session['role']=='enseignant' %}<li class="navBouton {% if page=='ListeQCM' %} active {% endif %}"><a href="/listeQCM">Consulter QCM</a></li>{% endif %}
-        {% if session['nomU'] and session['role']=='enseignant' %}<li class="navBouton {% if page=='ModifierQCM' %} active {% endif %}"><a href="/ModifierQCM">Modifier QCM</a></li>{% endif %}
+        <!-- {% if session['nomU'] and session['role']=='enseignant' %}<li class="navBouton {% if page=='ModifierQCM' %} active {% endif %}"><a href="/ModifierQCM">Modifier QCM</a></li>{% endif %} -->
         {% if session['nomU'] and session['role']=='enseignant' %}<li class="navBouton {% if page=='EnvoyerQCM' %} active {% endif %}"><a href="/EnvoyerQCM">Envoyer des enoncées</a></li>{% endif %}
         {% if session['nomU'] and session['role']=='enseignant' %}<li class="navBouton {% if page=='ListeEtudiants' %} active {% endif %}"><a href="/listeEtudiants">Consulter Etudiants</a></li>{% endif %}
         {% if session['nomU']=='ADMIN'and session['role']=='enseignant' %}<li class="navBouton {% if page=='ListeUtilisateurs' %} active {% endif %}"><a href="/listeUtilisateurs">Consulter Utilisateurs</a></li>{% endif %}
