--- a/templates/qcm/ModifQCM.html
+++ b/templates/qcm/ModifQCM.html
@@ -2,11 +2,11 @@
 
 {% block main %}
 <div class="menu">
-    <form action="{{ url_for('modificationQCMdansBDD') }}" method="POST">
-        <input type="hidden" name="QCMmodif" value="{{ QCMmodif.idQCM }}">    
+    <form action="{{ url_for('modifierQCM', id=QCMmodif.idQCM)}}" method="POST">
+        <!-- <input type="hidden" name="QCMmodif" value="{{QCMmodif.idQCM}}">     -->
         <!--ce form permet d'afficher la liste des question -->
-        <h1>Modifier votre examen</h1>
-        <p>Donnez un titre à votre QCM : <input type="text" name="nomQcm" placeholder="Titre" value="{{QCMmodif.Nom}}"/></p>
+        <h1>Modifier votre qcm</h1>
+        <p>Nouveau titre pour votre QCM : <input type="text" name="nomQcm" placeholder="Titre" value="{{QCMmodif.Nom}}"/></p>
         <div class="liste">
             <table>
                 <tr class="top">
