--- a/templates/statistiques.html
+++ b/templates/statistiques.html
@@ -1,5 +1,45 @@
 {% extends 'partials/base.html' %}
 
 {% block main %}
-<h1>Je ratio anthony</h1>
+<div class="menu">
+    <h1>Statistiques</h1>
+    <div class="stats">
+        <!-- faut faire un diagramme surement en baton au fil du temps donc deux batons (question/séquence) -->
+        <p>Nombre de participants : 10000</p>      <!-- récupérer le nombre de participants en temps réel -->
+    </div>
+    <div class="stats">
+        <h2>Résultats :</h2>
+        <div class="liste">
+            <table>
+                <tr class="top">
+                    <td>Date</td>                   <!-- Date -->
+                    <td>Etudiant</td>               <!-- Nom prénom de l'étudiant-->
+                    <td>Question seule</td>         <!-- Nombre de questions réussis -->
+                    <td>Séquence</td>               <!-- Pourcentage de questions bien répondus -->
+                </tr>
+                <!-- un for ici -->
+                <tr>
+                    <td>09/03/2023</td>
+                    <td>Reynier Théo</td>
+                    <td>Réussi</td>                 <!-- if question seule then id question + reussi/raté else vide -->
+                    <td>-</td>                      <!-- if séquence then id séquence + pourcentage question réussi else vide -->
+                </tr>
+                <tr>
+                    <td>10/03/2023</td>
+                    <td>Hernandez Roberto</td>
+                    <td>-</td>
+                    <td>83%</td>
+                </tr>
+                <!-- effacer les réponses des étudiants ? -->
+            </table>
+        </div>
+    </div>
+</div>
+
+<!-- Pour la base de donnée surement faire une classe stats avec : 
+    un id, 
+    une date, 
+    un mode (question->1 ou séquence 2), 
+    et un id(Question/Séquence) -->
+    
 {% endblock %}
