--- a/templates/wooclap/RepondreQCM.html
+++ b/templates/wooclap/RepondreQCM.html
@@ -8,7 +8,7 @@
         
     </script>
     <div class ="Reponse_etudiant">
-        <p class ="Reponse_etudiant">{{Enonce.enonce}}</p>
+        <p class ="Reponse_etudiant">{{Enonce[0].enonce}}</p>
     </div>
     </div>
 
