work in progress

--- a/templates/wooclap/RepondreQCM.html
+++ b/templates/wooclap/RepondreQCM.html
@@ -8,9 +8,11 @@
         
     </script>
     <div class ="Reponse_etudiant">
-        <p class ="Reponse_etudiant">{{ListeQuestionsQcm[0].idQ}}</p>
-        {%for key in ListeReponseQcm[1] %}
+        {%for i in range(lena)%}
+        <p class ="Reponse_etudiant">{{ListeQuestionsQcm[i].idQ}}</p>
+        {%for key in ListeReponseQcm[i] %}
         <p>{{key.reponse}}</p>
+        {%endfor%}
         {%endfor%}
     </div>
     </div>
